; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_jim-nvenc.c_get_lib.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_jim-nvenc.c_get_lib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvenc_data = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"Failed to load %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.nvenc_data*, i8*)* @get_lib to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_lib(%struct.nvenc_data* %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.nvenc_data*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.nvenc_data* %0, %struct.nvenc_data** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i64 @GetModuleHandleA(i8* %7)
  store i64 %8, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i64, i64* %6, align 8
  store i64 %12, i64* %3, align 8
  br label %23

13:                                               ; preds = %2
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @LoadLibraryA(i8* %14)
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %13
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @error(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %19)
  br label %21

21:                                               ; preds = %18, %13
  %22 = load i64, i64* %6, align 8
  store i64 %22, i64* %3, align 8
  br label %23

23:                                               ; preds = %21, %11
  %24 = load i64, i64* %3, align 8
  ret i64 %24
}

declare dso_local i64 @GetModuleHandleA(i8*) #1

declare dso_local i64 @LoadLibraryA(i8*) #1

declare dso_local i32 @error(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
